--- a/package.json
+++ b/package.json
@@ -9,13 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.2.2",
+    "@react-email/components": "0.0.21",
+    "axios": "^1.7.2",
+    "firebase": "^10.12.3",
+    "lucide-react": "^0.400.0",
+    "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "react-email": "2.1.5",
+    "resend": "^3.4.0"
   },
   "devDependencies": {
+    "@types/react": "18.3.3",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "typescript": "5.5.3"
   }
 }
